--- a/index.html
+++ b/index.html
@@ -1,7 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Portfolio</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5;
+  }
+  header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+  }
+  .container {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  h1, h2 {
+    color: #333;
+  }
+  .project {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+  .project img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+  .links {
+    margin-top: 10px;
+  }
+</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <header>
+    <h1>My Portfolio</h1>
+    <p>Welcome to my portfolio! Explore my projects, research, skills, and achievements.</p>
+  </header>
+  <div class="container">
+    <section id="projects">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Project 1: [Project Name]</h3>
+        <p>Description: Briefly describe the project and its goals.</p>
+        <img src="link-to-screenshot-image.png" alt="Project 1 Screenshot">
+        <div class="links">
+          <a href="link-to-live-demo">Live Demo</a> | <a href="link-to-github-repo">GitHub Repository</a>
+        </div>
+      </div>
+      <!-- Repeat for other projects -->
+    </section>
+    
+    <!-- Add other sections here -->
+    
+    <section id="contact">
+      <h2>Contact Information</h2>
+      <p>Email: [Your Email]<br>
+         LinkedIn: <a href="[Your LinkedIn Profile URL]">[Your LinkedIn Profile]</a><br>
+         GitHub: <a href="[Your GitHub Profile URL]">[Your GitHub Profile]</a></p>
+    </section>
+  </div>
 </body>
 </html>
