--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
   <header>
     <h1>My Portfolio</h1>
-    <p>Welcome to my portfolio! Explore my projects, research, skills, and achievements.</p>
+    <p>Welcome to my portfolio! I am Gargeya Akhilram Durgempudi.</p>
   </header>
   <div class="container">
     <section id="projects">
